--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
     <title>Frontend Mentor | Blog preview card</title>
   </head>
   <body>
-    These languages are the backbone of every website, defining structure,
-    content, and presentation.
+    <div class="container">
+      <img
+        src="assets/images/illustration-article.svg"
+        class="article-img"
+        alt="Article image"
+      />
+      <p class="tag">Learning</p>
+      <p class="date">Published 21 Dec 20223</p>
+      <h1 class="lead">HTML & CSS foundations</h1>
+      <p class="content">
+        These languages are the backbone of every website, defining structure,
+        content, and presentation.
+      </p>
+      <div class="credit">
+        <img src="assets/images/image-avatar.webp" alt="Greg Hooper" />
+        <h3 class="author">Greg Hooper</h3>
+      </div>
+    </div>
   </body>
 </html>
